# anki

./: .gitignore  .mypy.ini  CONTRIBUTORS  Cargo.toml  README.md  justfile
ante/: README.md  __init__.py  analytics.py  app.py  applied.py  circuit.py  comprehension.py  config.py  coverage.py  demo.py  diagnosis.py  diagnostic.py  documentary.py  dreamseed.py  experiment.py  forecast.py  fulllength.py  intentions.py  leakage.py  mastery.py  memory.py  metacognition.py  openended.py  os_notify.py  outline.py  palace.py  paraphrase.py  performance.py  performance_items.py  profile.py  readiness.py  recalibrate.py  reminders.py  rewards.py  rhythm.py  ritual.py  sessions.py  studyplan.py  tagger.py  trackrecord.py  (+1 more)
ante/ai/: __init__.py  baseline.py  checker.py  eval.py  generate.py  injection.py  provider.py  retrieval.py  studio.py  tutor.py
ante/data/: gold_set.json  mcat_outline.json  open_ended_items.json  paraphrase_set.json  performance_items.json  sample_predictions.json  sample_source.txt  seed_cards.json
ante/docs/: PRD.md  demo-script.md  installer.md  learning-science.md  mobile-and-sync.md  model-cards.md  notifications.md  results.md  rewards-tradeoff.md  rust-change.md
ante/service/: __init__.py  app.py  requirements.txt
ante/tests/: test_ai.py  test_app.py  test_circuit.py  test_comprehension.py  test_coverage.py  test_demo.py  test_diagnosis.py  test_diagnostic.py  test_experiment.py  (+25 more)
ios/: README.md  project.yml
rslib/ios-ffi/: Cargo.toml
rslib/ios-ffi/ctest/: smoke.c
rslib/ios-ffi/include/: anki_engine.h
rslib/ios-ffi/src/: lib.rs
(+60 files in other folders)
